refactor: nova arquitetura purista de pedidos e blindagem de concorrencia